# llm-format-benchmarker

./: .gitignore  INTEL_AI_PC_TESTING.md  LICENSE  README.md  install_environment.bat  install_environment.sh  project_summary.md  pyproject.toml  requirements.txt  run_benchmark.py  test_intel_gpu.py  test_intel_npu.py  test_intel_quantization.py  test_pytorch_quantization.py  test_setup.py
benchmarking/: __init__.py  benchmark_engine.py
configs/: __init__.py  config.py
configs/models/: .gitkeep
examples/: run_examples.py
inference/: README.md  comparison_examples.py  model_comparison.py  quick_comparison.py  test_comparison.py
models/: __init__.py  model_manager.py
quantization/: __init__.py  quantization_manager.py
utils/: __init__.py  hardware_detector.py  utils.py
